--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DaftarSayaActivity">
-        </activity>
+        <activity android:name=".NoteAddUpdateActivity"></activity>
+        <activity android:name=".DaftarSayaActivity"></activity>
         <activity
             android:name=".FavoriteActivity"
             android:parentActivityName=".MainActivity">
