--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".NoteAddUpdateActivity"></activity>
-        <activity android:name=".DaftarSayaActivity"></activity>
+        <receiver android:name=".LirikLaguWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/lirik_lagu_widget_info" />
+        </receiver>
+
+        <activity android:name=".NoteAddUpdateActivity" />
+        <activity
+            android:name=".DaftarSayaActivity"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".FavoriteActivity"
             android:parentActivityName=".MainActivity">
