--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PopulerActivity"
-            android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".DetailActivity"
+            android:parentActivityName=".MainActivity" ></activity>
+        <activity
+            android:name=".PopulerActivity"
+            android:parentActivityName=".MainActivity" />
 
         <receiver android:name=".LirikLaguWidget">
             <intent-filter>
